--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">I Am Poor</string>
+    <string name="poorMessage"> Currently experiencing a non-lucrative monetary deficit </string>
+    <string name="request"> Help </string>
+
 </resources>
